--- a/Exercises/Exercise-5/docker-compose.yml
+++ b/Exercises/Exercise-5/docker-compose.yml
@@ -1,30 +1,48 @@
-version: "3.9"
+
 services:
-    postgres:
-      image: postgres:10.5
-      restart: always
-      environment:
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=postgres
-      ports:
-        - '5432:5432'
-      volumes:
-        - ./postgres-data:/var/lib/postgresql/data
-      healthcheck:
-        test: [ "CMD-SHELL", "pg_isready -U postgres" ]
-        interval: 5s
-        timeout: 5s
-        retries: 5
-    test:
-      image: "exercise-5"
-      volumes:
-        - .:/app
-      command: python3 -m pytest
-    run:
-      image: "exercise-5"
-      depends_on:
-        postgres:
-          condition: service_healthy
-      volumes:
-        - .:/app
-      command: python3 main.py
+  postgres:
+    image: postgres:15
+    container_name: exercise5_db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: exercise5
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  run:
+    build: .
+    container_name: exercise5_app
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: exercise5
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+    volumes:
+      - .:/app
+    command: python3 main.py
+
+  test:
+    build: .
+    container_name: exercise5_test
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - .:/app
+    command: python3 -m pytest
+
+volumes:
+  postgres_data:
