--- a/Exercises/Exercise-5/Dockerfile
+++ b/Exercises/Exercise-5/Dockerfile
@@ -1,6 +1,8 @@
-FROM python:latest
+FROM python:3.11-slim
 
-WORKDIR app
+WORKDIR /app
 COPY . /app
 
-RUN python3 -m pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+CMD ["python", "main.py"]
