--- a/Exercises/Exercise-6/docker-compose.yml
+++ b/Exercises/Exercise-6/docker-compose.yml
@@ -1,12 +1,13 @@
 version: "3.9"
+
 services:
-    test:
-      image: "exercise-6"
-      volumes:
-        - .:/app
-      command: python3 -m pytest
-    run:
-      image: "exercise-6"
-      volumes:
-        - .:/app
-      command: /spark/bin/spark-submit main.py
+  run:
+    build: .
+    image: "exercise-6"
+    container_name: exercise-6_app
+    working_dir: /app
+    volumes:
+      - .:/app
+      - ./reports:/app/reports
+      - ./data:/app/data
+    command: python main.py
