--- a/Exercises/Exercise-7/docker-compose.yml
+++ b/Exercises/Exercise-7/docker-compose.yml
@@ -1,12 +1,8 @@
 version: "3.9"
 services:
-    test:
-      image: "exercise-7"
-      volumes:
-        - .:/app
-      command: python3 -m pytest
-    run:
-      image: "exercise-7"
-      volumes:
-        - .:/app
-      command: /spark/bin/spark-submit main.py
+  run:
+    image: "exercise-7"
+    build: .
+    volumes:
+      - .:/app
+    command: python3 main.py
