--- a/Exercises/Exercise-8/docker-compose.yml
+++ b/Exercises/Exercise-8/docker-compose.yml
@@ -1,12 +1,10 @@
-version: "3.9"
+
 services:
-    test:
-      image: "exercise-8"
-      volumes:
-        - .:/app
-      command: python3 -m pytest
     run:
       image: "exercise-8"
+      build: .
       volumes:
         - .:/app
       command: python3 main.py
+
+
