--- a/Exercises/Exercise-9/docker-compose.yml
+++ b/Exercises/Exercise-9/docker-compose.yml
@@ -1,12 +1,9 @@
 version: "3.9"
+
 services:
-    test:
-      image: "exercise-9"
-      volumes:
-        - .:/app
-      command: python3 -m pytest
-    run:
-      image: "exercise-9"
-      volumes:
-        - .:/app
-      command: python3 main.py
+  run:
+    image: exercise-9
+    build: .
+    volumes:
+      - .:/app
+    command: python main.py
